# blas-rs

./: Cargo.toml  LICENSE.txt  README.md
src/: gemm.rs  lib.rs  shared.rs
